Fix spacing below header

--- a/app/assets/stylesheets/belair.scss
+++ b/app/assets/stylesheets/belair.scss
@@ -9,7 +9,7 @@ $grey: #b0b0b0;
 
 
 .header {
-	min-height: 8.5em;
+	min-height: 110px;
 
   .logo {
     text-align: right;
